using System;

namespace Pibrary.Data
{
    [Serializable]
    public class SaveData
    {
        public bool purchased = false;
    }
}