using UnityEngine;

namespace Pibrary.PiMaterial
{
    public interface IMaterialManager
    {
        public Material createUIMaterial();
    }
}