using System;
using UnityEngine;

namespace Pibrary.UI
{
    public interface IColorSetter
    {
        public void SetColor(Material material);
    }
}