@startuml pibrary-for-unity
namespace Pibrary {
    class Constant {
        {static} + string ROOT_PATH
        {static} + string getAssetPath(string name)
    }

    class Pibrary<<Singleton>> {
        + Pibrary DefaultInstance
        + IAuthHandler AuthHandler
        + IDataHandler DataHandler
        + IDataStore<SaveData> DataStore
        + void Initialize()
        
    }

    enum LoadingState {
        WaitingToLoad
        Loading
        Completed
    }
}

namespace Pibrary.Config {
    enum Environment
    {
        Development
        Production
    }

    interface IConfigLoader {
        + IObservable<LoadingState> OnStateChanged
        + PibraryConfig Config
    }

    class AddressableConfigLoader implements IConfigLoader {
        - Environment environment
    }

    class ResourceConfigLoader implements IConfigLoader {
        - Environment environment
    }

    class ConfigProvider {
        {static} - IConfigLoader configLoader
        {static} + OAuthConfig OAuthConfig
        {static} + void Initialize()
    }

    class PibraryConfig {
        + OAuthConfig OAuthConfig
        + ContentConfig ContentConfig
    }

    class OAuthConfig {
        + string cliendID
        + string cliendSecret
    }

    class ContentConfig {
        + string contentID
    }

    PibraryConfig <-- IConfigLoader
    ConfigProvider ..> IConfigLoader
    PibraryConfig o-- ContentConfig
    PibraryConfig o-- OAuthConfig
    Environment <-u- AddressableConfigLoader
    Environment <-u- ResourceConfigLoader
}

namespace Pibrary.Auth {
    interface IAuthHandler {
        + IObservable<LoadingState> OnStateChanged 
        + void CallGoogleSignIn()
        + void CallEmailSignIn(string email, string password)
    }

    class FirebaseAuthHandler implements IAuthHandler {

    }

    interface IGoogleAuthHandler {
        + void getIdToken()
    }
    
    class MobileGoogleAuthHandler implements IGoogleAuthHandler {

    }

    FirebaseAuthHandler o-- IGoogleAuthHandler
}

namespace Pibrary.Data {
    class UserData {
        + List<DocumentReference> accessibleAuthorRef
        + List<DocumentReference> purchasedContentsRef
    }

    class SaveData {
        + boolean purchased
    }

    interface IDataHandler {
        + IObservable<LoadingState> OnStateChanged 
        + IReadOnlyReactiveProperty<UserData> Data
        + UserData FetchUserData(string uid)
    }

    class FirestoreHandler implements IDataHandler {

    }

    interface IDataStore<T> {
        + IObservable<T> SaveData
        + void Save()
    }

    class SerialDataStore<T> implements IDataStore {

    }

    UserData <-u- IDataHandler
}

namespace Pibrary.Presenters {
    class AuthPresenter {
        - Button googleButton
        - Button emailButton
        - Text emailField
        - Text passwordField
        - Button submitButton
    }
}

namespace Pibrary.UI {
    class ThemeParams<T> {
        + ObjectParams<T> primary
        + ObjectParams<T> secondary
        + TextParams<T> text
        + BackgroundParams<T> background
    }

    class ColorLoader {
        + ThemeParams<Material> ThemeMaterials
    }

    interface IColorSetter {
        + void SetColor(Material material)
    }

    class ImageColorSetter implements IColorSetter {}

    class TMPTextColorSetter implements IColorSetter {}

    class ColorController {
        - ThemeParams<List<IColorSetter>> setters
        + void SetParameter()
    }

    
    ThemeParams <-- ColorLoader
    ThemeParams <-- ColorController
    IColorSetter <-- ColorController
}

namespace Pibrary.Input {
    interface IInputProvider {
        + GetMousePosition()
    }

    class UnityInputProvider implements IInputProvider {
    }
}

namespace Pibrary.PiMaterial {
    interface IMaterialManager {
        + CreateUIMaterial()
    }

    class UnityMaterialManager implements IMaterialManager {

    }
}

Pibrary.Pibrary o-- Pibrary.Auth.IAuthHandler
Pibrary.Pibrary o-- Pibrary.Data.IDataHandler
Pibrary.Pibrary o-- Pibrary.Data.IDataStore
Pibrary.Auth.IAuthHandler <-- Pibrary.Presenters.AuthPresenter
Pibrary.Data.IDataHandler <-- Pibrary.Presenters.AuthPresenter
Pibrary.Data.SaveData <-- Pibrary.Pibrary
Pibrary.LoadingState <-- Pibrary.Data.IDataHandler
Pibrary.LoadingState <-- Pibrary.Auth.IAuthHandler
Pibrary.LoadingState <-- Pibrary.Config.IConfigLoader
Pibrary.Auth.MobileGoogleAuthHandler --> Pibrary.Config.ConfigProvider : Get cliendID
@enduml